--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: Tags
 layout: default
-description: recording date
+description: Sleep when tired and smile when awake. 
 header-img: "img/xuesong/home.jpg"
 ---
 
