--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hey, this is my a little gift for you."
-header-img: "img/xuesong/true.jfif"
+header-img: "img/xuesong/about.jpg"
 ---
 
 <!-- Language Selector -->
