--- a/tags.html
+++ b/tags.html
@@ -2,7 +2,7 @@
 title: Tags
 layout: default
 description: Sleep when tired and smile when awake. 
-header-img: "img/xuesong/home.jpg"
+header-img: "img/xuesong/tag.jpg"
 ---
 
 <!-- Page Header -->
